@@ -1,11 +1,13 @@
 package org.group6.travel.domain.token.model.entity;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
+import org.group6.travel.domain.user.model.entity.UserEntity;
 import org.group6.travel.domain.user.model.enums.StoreUserRole;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -29,8 +31,7 @@ public class UserDetailsEntity implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority(this.role.toString()));
-    }
+        return Collections.emptyList();}
 
     @Override
     public String getUsername() {
@@ -45,5 +46,14 @@ public class UserDetailsEntity implements UserDetails {
     @Override
     public boolean isEnabled() {
         return UserDetails.super.isEnabled();
+    }
+
+    public static UserDetailsEntity toDto(UserEntity userEntity){
+        return UserDetailsEntity.builder()
+                .userId(userEntity.getUserId())
+                .email(userEntity.getEmail())
+                .userName(userEntity.getUserName())
+                .password(userEntity.getEncryptedPassword())
+                .build();
     }
 }
